[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/Actors/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://source/Actors/Player/PlayerFSM.gd" type="Script" id=2]
[ext_resource path="res://assets/Player/dronesprite.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AnimationNodeStateMachine" id=2]

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="PlayerFSM" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="StateOutput" type="Label" parent="."]
margin_left = -20.0
margin_top = -28.0
margin_right = 20.0
margin_bottom = -14.0
text = "State"
align = 1
valign = 1

[node name="AnimationPlayers" type="Node2D" parent="."]

[node name="SpritePlayer" type="AnimationPlayer" parent="AnimationPlayers"]
root_node = NodePath("../..")

[node name="EffectsPlayer" type="AnimationPlayer" parent="AnimationPlayers"]

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayers"]
tree_root = SubResource( 2 )
anim_player = NodePath("../SpritePlayer")
parameters/playback = SubResource( 3 )
